# robot-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  ci.yml  test-macos.yml  test-windows.yml  test.yml
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  capture_screen.cpp  record_replay.cpp  type_text.cpp
include/robot/: Capabilities.h  Error.h  Event.h  EventTap.h  Geometry.h  Image.h  Key.h  Keyboard.h  Modifiers.h  Monitor.h  Mouse.h  MouseButton.h  Recorder.h  Robot.h  Screen.h  Scroll.h  Session.h
include/robot/backend/: BackendFactory.h  IEventTapBackend.h  IKeyboardBackend.h  IMouseBackend.h  IPlatformBackend.h  IScreenBackend.h
src/: ActionRecorder.h  EventHook.h  EventHookMacOS.h  EventHookWindows.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Mouse.test.cpp  Screen.cpp  Screen.h  Utils.cpp  Utils.h  types.h
src/common/: EventTap.cpp  Image.cpp  Keyboard.cpp  Mouse.cpp  Recorder.cpp  Screen.cpp  Session.cpp
src/platform/linux/: LinuxBackendFactory.cpp  LinuxEvdevKeymap.cpp  LinuxEvdevKeymap.h  LinuxPlatformBackend.cpp  LinuxPlatformBackend.h  NullScreenBackend.h  UinputBackend.cpp  UinputBackend.h  X11Display.cpp  X11Display.h  X11EventTapBackend.cpp  X11EventTapBackend.h  X11KeyMap.cpp  X11KeyMap.h  X11KeyboardBackend.cpp  X11KeyboardBackend.h  X11MouseBackend.cpp  X11MouseBackend.h  X11ScreenBackend.cpp  X11ScreenBackend.h
src/platform/macos/: MacBackendFactory.cpp  MacEventTapBackend.cpp  MacEventTapBackend.h  MacKeyMap.cpp  MacKeyMap.h  MacKeyboardBackend.cpp  MacKeyboardBackend.h  MacMouseBackend.cpp  MacMouseBackend.h  MacPlatformBackend.h  MacScreenBackend.cpp  MacScreenBackend.h
src/platform/windows/: WinBackendFactory.cpp  WinDpi.cpp  WinDpi.h  WinEventTapBackend.cpp  WinEventTapBackend.h  WinKeyMap.cpp  WinKeyMap.h  WinKeyboardBackend.cpp  WinKeyboardBackend.h  WinMouseBackend.cpp  WinMouseBackend.h  WinPlatformBackend.h  WinScreenBackend.cpp  WinScreenBackend.h
tests/: CMakeLists.txt  README.md
tests/assets/: CMakeLists.txt
tests/sdl/: ExtendedTestElements.h  KeyboardTests.h  MouseTests.cpp  MouseTests.h  RobotSDLTestFixture.h  SDLTestApp.cpp  SDLTestMain.cpp  ScreenTests.h  TestConfig.h  TestContext.h  TestElements.h
tests/unit/: GeometryTests.cpp  KeyTests.cpp  KeyboardTest.cpp  ModifiersTests.cpp  MouseSequenceTests.cpp  MouseTest.cpp  RecorderTests.cpp  ScreenLogicTests.cpp  ScreenTest.cpp  Utf8Tests.cpp
tests/unit/support/: MockBackend.h
